--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
+aiogram==2.11.2
+aiohttp==3.7.3
 APScheduler==3.6.3
+async-timeout==3.0.1
+attrs==20.3.0
+Babel==2.9.0
 cachetools==4.2.1
 certifi==2020.12.5
 cffi==1.14.4
-chardet==4.0.0
+chardet==3.0.4
 cryptography==3.3.1
 decorator==4.4.2
 google-api-core==1.25.1
@@ -12,6 +17,7 @@ google-auth-httplib2==0.0.4
 googleapis-common-protos==1.52.0
 httplib2==0.18.1
 idna==2.10
+multidict==5.1.0
 oauth2client==4.1.3
 protobuf==3.14.0
 pyasn1==0.4.8
@@ -23,6 +29,8 @@ requests==2.25.1
 rsa==4.7
 six==1.15.0
 tornado==6.1
+typing-extensions==3.7.4.3
 tzlocal==2.1
 uritemplate==3.0.1
 urllib3==1.26.3
+yarl==1.6.3
